--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "car-project": "file:",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
